# sciroc_objdet

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
action/: ObjDetInterface.action  ObjDetInterfaceAction.action  ObjectClassification.action  ObjectComparison.action  ObjectEnumeration.action
config/: console.config
include/sciroc_objdet/: ActionClientModeWrapper.h  ObjDetInterfaceAS.h  ObjDetMode.h
launch/: sciroc_objdet.launch  sciroc_objdet_whole_module.launch
src/: ActionClientModeWrapper.cpp  ObjDetInterfaceAS.cpp  ObjDetMode.cpp  enumeration.cpp  interface.cpp  objdet_interface.cpp
