<?xml version="1.0"?>
<package format="2">
    <name>sciroc_objdet</name>
    <version>0.0.1</version>
    <description>The sciroc_objdet package</description>

    <maintainer email="5083365@studenti.unige.it">Marco Gabriele Fedozzi</maintainer>
    <maintainer email="4143910@studenti.unige.it">Francesco Ganci</maintainer>
    <maintainer email="4494106@studenti.unige.it">Laura Triglia</maintainer>
    
    <license>MIT</license>
    
    <author email="5083365@studenti.unige.it">Marco Gabriele Fedozzi</author>
    <author email="4143910@studenti.unige.it">Francesco Ganci</author>
    <author email="4494106@studenti.unige.it">Laura Triglia</author>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>actionlib</build_depend>
    <build_depend>actionlib_msgs</build_depend>
    <build_depend>message_generation</build_depend>
    <build_export_depend>roscpp</build_export_depend>
    <build_export_depend>rospy</build_export_depend>
    <build_export_depend>actionlib</build_export_depend>
    <build_export_depend>actionlib_msgs</build_export_depend>
    <build_export_depend>message_generation</build_export_depend>
    <exec_depend>roscpp</exec_depend>
    <exec_depend>rospy</exec_depend>
    <exec_depend>actionlib</exec_depend>
    <exec_depend>actionlib_msgs</exec_depend>
    <exec_depend>message_generation</exec_depend>

    <export>

    </export>
</package>